[package]
name = "hypr-mount"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }

[[bin]]
name = "hypr-mount"
path = "./src/main.rs"
