[package]
name = "hypr-mount"
version = "0.1.1"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }

[[bin]]
name = "hypr-mount"
path = "./src/main.rs"
